# tree-sitter-marte

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-MARTe.wasm
bindings/c/: tree-sitter-MARTe.h  tree-sitter-MARTe.pc.in  tree-sitter-marte.h  tree-sitter-marte.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_mar_te/: __init__.py  binding.c
bindings/python/tree_sitter_marte/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
examples/: ex1.marte  ex2.marte  ex3.marte  ex4.marte
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
